Changed Side Info closes #4

--- a/info.yml
+++ b/info.yml
@@ -1,5 +1,5 @@
 name : Denno Louis
 keywords : "some | adjectives | about you"
 major: Computer Science
-gradyear: 2026
-tagline : a short phrase you want people to see on every page
+gradyear: 2023
+tagline : Heello World
