--- a/info.yml
+++ b/info.yml
@@ -2,4 +2,4 @@ name : Denno Louis
 keywords : "some | adjectives | about you"
 major: Computer Science
 gradyear: 2023
-tagline : Heello World
+tagline : Hello World
